commit on error-alert-issue

--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,5 +1,5 @@
-DATABASE_URL=enter-your-production-database-url-here
-DATABASE_URL_DEVELOPMENT=enter-your-development-database-url-here
-DATABASE_URL_TEST=enter-your-test-database-url-here
-DATABASE_URL_PREVIEW=enter-your-preview-database-url-here
+DATABASE_URL=postgres://nzgrwdje:ZYsSbuX1cx5TQCcsx41cVgZKVUVZs_95@ziggy.db.elephantsql.com/nzgrwdje
+DATABASE_URL_DEVELOPMENT=postgres://tpbejrht:7bptC2Wfw5dOeSiHnepExjoV6eozy95O@ziggy.db.elephantsql.com/tpbejrht
+DATABASE_URL_TEST=postgres://yuhgytkq:PZKq7UdmptsuU-vnQ79DPJaw9wIfOJb3@ziggy.db.elephantsql.com/yuhgytkq
+DATABASE_URL_PREVIEW=postgres://cxqltzwg:SMGmruTEhwxVmzItcRMxMqCmwGMNGcmG@ziggy.db.elephantsql.com/cxqltzwg
 LOG_LEVEL=info
