--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
   },
   "keywords": [],
   "author": "Thinkful, Inc.",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "knex": "^2.0.0",
+    "react-usestateref": "^1.0.8"
+  }
 }
